Correção na intent de time

--- a/WorkshopAtentoBot/WorkshopAtentoBot/WorkshopAtentoBot.csproj
+++ b/WorkshopAtentoBot/WorkshopAtentoBot/WorkshopAtentoBot.csproj
@@ -191,6 +191,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\WorkshopAtentoBot - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\WorkshopAtentoBot - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\WorkshopAtentoBot - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
